[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
axum = "0.7.4"
cargo-modules = "0.15.5"
reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
serde = "1.0.202"
serde_json = "1.0.117"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = {version = "1.8.0", features = ["v4"]}
validator = "0.16.1"
axum-extra = { version = "0.9.2", features = ["cookie"] }
jsonwebtoken = "9.2.0"
chrono = "0.4.35"
dotenvy = "0.15.7"
lazy_static = "1.4.0"

[dev-dependencies]
reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }